update one preprocess

--- a/notebooks/Crear Targets.ipynb
+++ b/notebooks/Crear Targets.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "47c6ef8d",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "a6dfbea7",
    "metadata": {},
    "outputs": [],
@@ -59,31 +59,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "e7488856",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "id": "3ebcba34",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "244"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Obtengo todos los audios con 4 partes que no esen en development\n",
-    "df_audios_completos = df_annotations[df_annotations['Type'] != 'Development'][['PC_Num','Part_Num']].drop_duplicates().groupby('PC_Num').count().reset_index()\n",
-    "pc_num_list = df_audios_completos['PC_Num'].values"
+    "len(os.listdir('data/TRANSCRIPCIONES'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "b811a12b",
+   "execution_count": 7,
+   "id": "c6576ee3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "iterlist_zip = df_annotations[['Audio_Name','PC_Num']]\n",
-    "df_pc_num_list = iterlist_zip[iterlist_zip['PC_Num'].isin(pc_num_list)].drop_duplicates()"
+    "len(feature_dict.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "52c44bb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "205"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_annotations[df_annotations['Type'] != 'Development']['Audio_Name'].drop_duplicates())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "02ef39e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "244"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_annotations['Audio_Name'].drop_duplicates())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "04da2ecf",
+   "id": "e7488856",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_audios_usables = df_annotations[df_annotations['Type'] != 'Development'][['PC_Num','Part_Num']].drop_duplicates().groupby('PC_Num').count().reset_index()\n",
+    "\n",
+    "pc_num_list = df_audios_usables['PC_Num'].values\n",
+    "\n",
+    "iterlist_zip = df_annotations[['Audio_Name','PC_Num']]\n",
+    "\n",
+    "# zip para iterar\n",
+    "df_pc_num_list = iterlist_zip[iterlist_zip['PC_Num'].isin(pc_num_list)].drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7ee60a52",
    "metadata": {},
    "outputs": [
     {
@@ -99,44 +179,41 @@
     "\n",
     "for pc_num, audio_name in zip(df_pc_num_list['PC_Num'], df_pc_num_list['Audio_Name']):\n",
     "    \n",
-    "    part_max = df_annotations[df_annotations['PC_Num'] == 21]['Part_Num'].max()\n",
+    "    part_max = df_annotations[df_annotations['PC_Num'] == pc_num]['Part_Num'].max()\n",
+    "    \n",
+    "    try:\n",
+    "        feature_dict[audio_name]\n",
+    "    except:\n",
+    "        feature_dict[audio_name] = {}\n",
+    "        \n",
     "    part_sets = {}\n",
     "    \n",
-    "    print('Procesando: ', audio_name)\n",
-    "    for part in range(part_max -1):\n",
-    "        part_sets[part + 1] = audio_select_mean_vote(df_annotations, part_num = part, pc_num = pc_num)\n",
-    "    #df_test_2 = audio_select_mean_vote(df_annotations, part_num = 2, pc_num = pc_num)\n",
-    "    #df_test_3 = audio_select_mean_vote(df_annotations, part_num = 3, pc_num = pc_num)\n",
-    "    #df_test_4 = audio_select_mean_vote(df_annotations, part_num = 4, pc_num = pc_num)\n",
-    "\n",
-    "    #df_test_2['Time'] = df_test_1['Time'].max() + df_test_2['Time']\n",
-    "    #df_test_3['Time'] = df_test_2['Time'].max() + df_test_3['Time']\n",
-    "    #df_test_4['Time'] = df_test_3['Time'].max() + df_test_4['Time']\n",
-    "\n",
-    "    #df_test = pd.concat([df_test_1, df_test_2, df_test_3, df_test_4], ignore_index = True)\n",
-    "    #targets_mean_vote[audio_name] = {}\n",
-    "    #targets_mean_vote[audio_name]['tupla_start_end'] = {}\n",
-    "    #targets_mean_vote[audio_name]['mean_vote_target'] = {}\n",
-    "    #idx = 0\n",
-    "\n",
-    "    #for segment in feature_dict[audio_name]['tupla_start_end']:\n",
-    "    #    beginning = segment[0]\n",
-    "    #    end = segment[1]\n",
-    "\n",
-    "    #    targets_mean_vote[audio_name]['mean_vote_target'][idx] = df_test[(df_test['Time'] >= beginning) & (df_test['Time'] <= end)][['Arousal','Dominance','Valence']].mean().values.tolist()\n",
-    "    #    targets_mean_vote[audio_name]['tupla_start_end'][idx] = segment\n",
-    "\n",
-    "    #    idx += 1\n",
-    "    break"
+    "    for part in range(part_max):\n",
+    "        part_sets[part + 1] = audio_select_mean_vote(df_annotations, part_num = part + 1, pc_num = pc_num)\n",
+    "        \n",
+    "    print(f'Error en {audio_name}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f7e4c17e",
+   "execution_count": 33,
+   "id": "e04045d9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(feature_dict.keys())"
+   ]
   }
  ],
  "metadata": {
