--- a/notebooks/Modelo - Modelo simple.ipynb
+++ b/notebooks/Modelo - Modelo simple.ipynb
@@ -73,8 +73,10 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2ffd9335",
-   "metadata": {},
+   "id": "8250fb0e",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -569,8 +571,10 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4f3af5a3",
-   "metadata": {},
+   "id": "96a322c3",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1087,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "410bf1c0",
+   "id": "54a4330c",
    "metadata": {
     "scrolled": true
    },
@@ -1256,7 +1260,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "20964bbc",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
