--- a/notebooks/Clean_and_Lab_posprocess.ipynb
+++ b/notebooks/Clean_and_Lab_posprocess.ipynb
@@ -1227,7 +1227,9 @@
    "cell_type": "code",
    "execution_count": 46,
    "id": "7528cd3a-581f-4b4e-bcfa-c0510ac60a07",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2251,9 +2253,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48c17245-089b-4c2c-9878-283d1266063c",
+   "metadata": {},
+   "source": [
+    "## Clean data for classification"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8da4cd69-943e-4a3a-b457-5dd1a35a00ac",
+   "execution_count": 7,
+   "id": "b4c33bc4-22c2-481e-9014-c4a744f1798e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def __save_input_features(dataset_object, name):\n",
+    "    with open(f'{name}', \"wb\") as pkl:\n",
+    "        pickle.dump(dataset_object, pkl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a8006d7e-7fd2-4dde-a1d0-b2ba49053702",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "old input_features: 3427, fixed length input features: 1096\n",
+      "old input_features: 4849, fixed length input features: 1640\n",
+      "old input_features: 12382, fixed length input features: 4024\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import torchaudio\n",
+    "import pickle\n",
+    "from pathlib import Path\n",
+    "\n",
+    "class_input_features_development_fixed = \"/Users/beltre.wilton/apps/mspconv_ftlab/data/class_input_features_development_fixed.pkl\"\n",
+    "class_input_features_test_fixed = \"/Users/beltre.wilton/apps/mspconv_ftlab/data/class_input_features_test_fixed.pkl\"\n",
+    "class_input_features_train_fixed = \"/Users/beltre.wilton/apps/mspconv_ftlab/data/class_input_features_train_fixed.pkl\"\n",
+    "\n",
+    "\n",
+    "input_features = {}\n",
+    "\n",
+    "def load_inputs(input_pkl):\n",
+    "  try:\n",
+    "      with open(input_pkl, \"rb\") as pkl:\n",
+    "          input_features = pickle.load(pkl)\n",
+    "          return input_features\n",
+    "  except Exception as ex:\n",
+    "      print(ex)\n",
+    "    \n",
+    "\n",
+    "input_features_development = load_inputs(class_input_features_development_fixed)\n",
+    "input_features_test = load_inputs(class_input_features_test_fixed)\n",
+    "input_features_train = load_inputs(class_input_features_train_fixed)\n",
+    "\n",
+    "\n",
+    "def fix_input_features(input_features):\n",
+    "    durations = []\n",
+    "    fixed_input_features = {}\n",
+    "    inputs, labels = [], []\n",
+    "    stats = []\n",
+    "    for i, (input, label) in enumerate(zip(input_features['inputs'], input_features['labels'])):\n",
+    "        path = f\"/Users/beltre.wilton/apps/mspconv_ftlab/audiosegments/{input}\"\n",
+    "        wave, sr = torchaudio.load(path, normalize=True)\n",
+    "        duration = wave.shape[1] / sr\n",
+    "        mean = wave[0].mean().item()\n",
+    "        std = wave[0].std().item()\n",
+    "        if duration >= 2.5 and duration <= 3.5:\n",
+    "            durations.append(duration)\n",
+    "            stats.append([mean, std])\n",
+    "            inputs.append(input)\n",
+    "            labels.append(label)\n",
+    "    fixed_input_features['inputs'] = inputs\n",
+    "    fixed_input_features['labels'] = labels\n",
+    "    return np.array(durations), fixed_input_features, stats\n",
+    "\n",
+    "oldf = len(input_features_development['inputs'])\n",
+    "durations, input_features_development,  stats = fix_input_features(input_features_development)\n",
+    "newf = len(durations)\n",
+    "print(f\"old input_features: {oldf}, fixed length input features: {newf}\")\n",
+    "\n",
+    "oldf = len(input_features_test['inputs'])\n",
+    "durations, input_features_test,  stats = fix_input_features(input_features_test)\n",
+    "newf = len(durations)\n",
+    "print(f\"old input_features: {oldf}, fixed length input features: {newf}\")\n",
+    "\n",
+    "oldf = len(input_features_train['inputs'])\n",
+    "durations, input_features_train,  stats = fix_input_features(input_features_train)\n",
+    "newf = len(durations)\n",
+    "print(f\"old input_features: {oldf}, fixed length input features: {newf}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9842b510-075e-4971-b268-a58eae5d73fe",
    "metadata": {},
    "outputs": [],
    "source": []
