progreso hasta ahora

--- a/notebooks/04_Pre-Procesado_Votación promedio por rango.ipynb
+++ b/notebooks/04_Pre-Procesado_Votación promedio por rango.ipynb
@@ -41,7 +41,7 @@
    "execution_count": 4,
    "id": "8bf33c66",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
